changes to ingress path
changes to ingress path

--- a/IngressLoadBalancing/basic-ingress.yaml
+++ b/IngressLoadBalancing/basic-ingress.yaml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   name: basic-ingress
 spec:
-  defaultBackend:
+  defaultBackend: ## NodePort
     service:
       name: web
       port:
