--- a/IngressLoadBalancing/fanout-ingress.yaml
+++ b/IngressLoadBalancing/fanout-ingress.yaml
@@ -13,6 +13,13 @@ spec:
             name: web
             port:
               number: 8080
+      - path: /v1/*
+        pathType: ImplementationSpecific
+        backend:
+          service:
+            name: web2
+            port:
+              number: 8080
       - path: /v2/*
         pathType: ImplementationSpecific
         backend:
