role bindings and probes

--- a/IngressLoadBalancing/fanout-ingress-v2.yaml
+++ b/IngressLoadBalancing/fanout-ingress-v2.yaml
@@ -17,7 +17,7 @@ spec:
         pathType: ImplementationSpecific
         backend:
           service:
-            name: web2
+            name: web
             port:
               number: 8080
       - path: /v2/*
